<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#F0F8F8"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:fontFamily="@font/metropolis_black"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:layout_marginTop="20dp"
            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/sample_triangle"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:fontFamily="@font/metropolis_medium"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_history"
            android:fontFamily="@font/metropolis_extrabold"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/blaise_pascal"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/metropolis_medium"
            android:text="@string/history_desc"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_importance"
            android:fontFamily="@font/metropolis_extrabold"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/patterns_triangle"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/importance_desc"
            android:fontFamily="@font/metropolis_medium"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_generator"
            android:fontFamily="@font/metropolis_extrabold"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generator_desc"
            android:fontFamily="@font/metropolis_medium"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_members"
            android:fontFamily="@font/metropolis_semibold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/try_out"
            android:fontFamily="@font/metropolis_medium"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/generate_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Generate"
            android:fontFamily="@font/metropolis_extrabold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:background="@drawable/custom_button"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>







</ScrollView>